added live host link

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     </div>
 
     <script src="index.js"></script>
+
+    <!-- pip hosted link -->
+    <!-- https://rvk9741.github.io/Picture-In-Picture/ -->
   </body>
 </html>
